# IekAPI

./: .gitignore  README.md  pyproject.toml  readme.md
src/: config.py  logging_config.py  main.py
src/enums/: urls.py
src/schemas/: product.py
src/services/: ExcelService.py  IekService.py
